[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio_utils"
authors = [
    {name = "Marc Singleton", email = "marcsingleton@berkeley.edu"}
]
description = "A collection of utility functions for computational biology."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["bioinformatics", "computational biology"]
license = {text = "CC BY-NC 4.0"}
dynamic = ["version"]
